2021-11-16  Jay Berkenbilt  <ejb@ql.org>

	* 10.4.0: release

2021-11-10  Jay Berkenbilt  <ejb@ql.org>

	* Add --allow-weak-crypto option to suppress warnings about use of
	weak cryptographic algorithms. Update documentation around this
	issue. Fixes #358.

2021-11-07  Jay Berkenbilt  <ejb@ql.org>

	* Relax xref recovery logic a bit so that files whose objects are
	either missing endobj or have endobj at other than the beginning
	of a line can still be recovered. Fixes #573.

2021-11-04  Jay Berkenbilt  <ejb@ql.org>

	* Add support for OpenSSL 3. Fixes #568.

	The OpenSSL version is detected at compile-time. If you want to
	build with OpenSSL 3 on a system that has OpenSSL 1 installed, you
	can run configure like this (or similar to this depending on how
	you installed openssl3):

	pc_openssl_CFLAGS=-I/path/to/openssl3/include \
	pc_openssl_LIBS='-L/path/to/openssl3/lib64 -lssl -lcrypto' \
	./configure

	where /path/to/openssl3 is wherever your OpenSSL 3 distribution is
	installed. You may also need to set the LD_LIBRARY_PATH
	environment variable if it's not installed in a standard location.

	* Add range check in QPDFNumberTreeObjectHelper (fuzz issue 37740).

	* Add QIntC::range_check_subtract to do range checking on
	subtraction, which has different boundary conditions from
	addition.

	* Bug fix: fix crash that could occur under certain conditions
	when using --pages with files that had form fields. Fixes #548.

	* Add an extra check to the library to detect when foreign objects
	are inserted directly (instead of using
	<function>QPDF::copyForeignObject</function>) at the time of
	insertion rather than when the file is written. Catching the error
	sooner makes it much easier to locate the incorrect code.

2021-11-03  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: make overlay/underlay work on a page with no resource
	dictionary. Fixes #527.

2021-11-02  Jay Berkenbilt  <ejb@ql.org>

	* Add QPDF::findPage to the public API. This is primarily to help