@@ -1,9 +1,3 @@
-Next
-====
-
-* Add a method to the C API that returns the length of tmp_str so that
-  we can handle strings with embedded null characters.
-
 Documentation
 =============
 
